--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -10,314 +10,25 @@
 			 xmlns:appmodels="clr-namespace:TorboFile.ViewModels"
 			 xmlns:controls="clr-namespace:TorboFile.View.Controls"
 			 xmlns:convert="clr-namespace:Lemur.Windows.Converters"
+			 xmlns:fb="clr-namespace:Lemur.Windows.Controls"
 			 mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
-	<UserControl.Resources>
-
-		<ResourceDictionary>
-
-			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="/TorboFile;component/assets/ConditionsDictionary.xaml"/>
-				<ResourceDictionary Source="/TorboFile;component/assets/ActionsDictionary.xaml"/>
-
-			</ResourceDictionary.MergedDictionaries>
-
-			<Style x:Key="SearchItemControl" TargetType="ItemsControl">
-				<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled" />
-				<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-				<Setter Property="VerticalContentAlignment" Value="Stretch"/>
-				<Setter Property="Background" Value="White"/>
-			</Style>
-
-			<!-- Picker for condition type -->
-			<DataTemplate x:Key="conditionPicker" DataType="{x:Type matchmodel:ConditionPickerVM}">
-
-				<StackPanel Orientation="Horizontal">
-					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2"  PreviewMouseLeftButtonDown="ComboBox_PreviewMouseDown"
-						ItemsSource="{Binding AvailableTypes}" SelectedItem="{Binding CreateType}">
-
-						<ComboBox.ItemTemplate>
-							<DataTemplate DataType="{x:Type types:TypeDescription}">
-
-								<TextBlock Text="{Binding Name}" ToolTip="{Binding Desc}"/>
-
-							</DataTemplate>
-						</ComboBox.ItemTemplate>
-					</ComboBox>
-				
-				<Button Name="btnCreate" Style="{StaticResource StdButton}" Content="CREATE" Margin="2"
-						Command="{Binding CmdInstantiate}">
-				</Button>
-				</StackPanel>
-			</DataTemplate>
-
-			<!-- Picker for condition type -->
-			<DataTemplate x:Key="actionPicker" DataType="{x:Type matchmodel:ActionPickerVM}">
-
-				<StackPanel Orientation="Horizontal">
-					<ComboBox Name="matchTypesDropDown" MinWidth="64" Margin="2" PreviewMouseLeftButtonDown="ComboBox_PreviewMouseDown"
-						ItemsSource="{Binding AvailableTypes}" SelectedItem="{Binding CreateType}">
-						<ComboBox.ItemTemplate>
-							<DataTemplate DataType="{x:Type types:TypeDescription}">
-
-								<TextBlock Text="{Binding Name}" ToolTip="{Binding Desc}"/>
-
-							</DataTemplate>
-						</ComboBox.ItemTemplate>
-					</ComboBox>
-
-					<Button Name="btnCreate" Style="{StaticResource StdButton}" Content="CREATE" Margin="2"
-						Command="{Binding CmdInstantiate}">
-					</Button>
-				</StackPanel>
-			</DataTemplate>
-			
-			<!-- MATCH BUILDER -->
-			<DataTemplate x:Key="conditionBuilder" DataType="{x:Type appmodels:MatchBuilder}">
-
-				<DockPanel>
-
-					<TextBlock DockPanel.Dock="Top" Text="SEARCH CONDITIONS:"/>
-					<ContentControl DockPanel.Dock="Top"
-									Content="{Binding Picker}" ContentTemplate="{StaticResource conditionPicker}"/>
-					
-					<ItemsControl x:Name="conditionsList" Style="{StaticResource SearchItemControl}"
-								  Visibility="{Binding DataModels.Count, Converter={StaticResource HasItemsToVisible}}"
-								  ItemsSource="{Binding DataModels}" DockPanel.Dock="Bottom">
-
-						<ItemsControl.ItemTemplate>
-
-							<DataTemplate DataType="{x:Type mvvm:DataObjectVM}">
-
-								<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-									
-									<ContentPresenter ContentTemplate="{StaticResource fileTestTemplate}"/>
-
-									<Button Name="btnRemove" Style="{StaticResource StdButton}" Grid.Row="0"
-											HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,4,0"
-									Command="{Binding ElementName=conditionsList, Path=DataContext.CmdRemove}"
-										CommandParameter="{Binding}">
-
-										<StackPanel>
-											<TextBlock>REMOVE</TextBlock>
-											<Image Source="/TorboFile;component/assets/images/flat/png/Close-128.png"/>
-										</StackPanel>
-
-									</Button>
-
-								</Grid>
-
-							</DataTemplate>
-
-						</ItemsControl.ItemTemplate>
-
-					</ItemsControl>
-
-				</DockPanel>
-				
-			</DataTemplate>
-
-			<!-- ACTION BUILDER -->
-			<DataTemplate x:Key="actionBuilder" DataType="{x:Type appmodels:ActionBuilder}">
-
-				<DockPanel>
-
-					<TextBlock DockPanel.Dock="Top" Text="ACTIONS:"/>
-					<ContentControl DockPanel.Dock="Top"
-									Content="{Binding Picker}" ContentTemplate="{StaticResource actionPicker}"/>
-					
-					<ItemsControl x:Name="actionsList" ItemsSource="{Binding DataModels}" DockPanel.Dock="Bottom"
-								  Style="{StaticResource SearchItemControl}"
-							  Visibility="{Binding DataModels.Count, Converter={StaticResource HasItemsToVisible}}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-
-						<ItemsControl.ItemTemplate>
-
-							<DataTemplate DataType="{x:Type mvvm:DataObjectVM}">
-
-								<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
-									<ContentPresenter ContentTemplate="{StaticResource fileActionTemplate}"/>
-
-									<Button Name="btnRemove" Style="{StaticResource StdButton}" Grid.Row="0"
-											HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,4,0"
-									Command="{Binding ElementName=actionsList, Path=DataContext.CmdRemove}"
-										CommandParameter="{Binding}">
-
-										<StackPanel>
-											<TextBlock>REMOVE</TextBlock>
-											<Image Source="/TorboFile;component/assets/images/flat/png/Close-128.png"/>
-										</StackPanel>
-
-									</Button>
-
-								</Grid>
-
-							</DataTemplate>
-
-						</ItemsControl.ItemTemplate>
-
-					</ItemsControl>
-
-				</DockPanel>
-
-			</DataTemplate>
-
-			<DataTemplate x:Key="buildSearchTemplate" DataType="{x:Type appmodels:CustomSearchVM}">
-
-				<DockPanel LastChildFill="False">
-
-					<StackPanel DockPanel.Dock="Top" Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Left">
-						
-						<Button Name="btnSave" Style="{StaticResource textButton}" Content="SAVE SEARCH"
-				Command="{Binding CmdSaveOperation}"/>
-						<Button Name="btnLoad" Style="{StaticResource textButton}" Content="LOAD SEARCH"
-					Command="{Binding CmdLoadOperation}">
-						</Button>
-						<Button Name="btnRun" Style="{StaticResource textButton}" Content="RUN SEARCH"
-					Command="{Binding CmdSearchMode}">
-						</Button>
-					</StackPanel>
-
-					<StackPanel Name="searchSettingsPanel" DockPanel.Dock="Top" Orientation="Vertical">
-						<CheckBox Name="chkRecursive" Content="Recursive Search" IsChecked="{Binding  Path=BuildSearchVM.Recursive}"
-								  ToolTip="Search all subfolders of the main search folder" />
-						<CheckBox Name="chkSkipItem" Content="Skip File on Error" IsChecked="{Binding Path=BuildSearchVM.SkipItemOnError}"
-								  ToolTip="If an action fails on a file or directory, skip any further actions for that file." />
-						<!--<CheckBox Name="chkAutoRun" Content="AutoRun Actions" IsChecked="{Binding Path=BuildSearchVM.AutoRun}"
-						  ToolTip="Run actions immediately on all matched files. WARNING: You will not be able to review the files beforehand." />-->
-
-						<StackPanel Orientation="Horizontal">
-						<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickDirectory}">
-							<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
-						</Button>
-						<TextBox Style="{StaticResource TextInputTemplate}" Name="fldDirectory"
-									 Text="{Binding SearchDirectory, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" />
-						</StackPanel>
-
-					</StackPanel>
-					
-					<ScrollViewer DockPanel.Dock="Top" VerticalScrollBarVisibility="Auto"
-								  DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.BuildSearchVM}">
-						<DockPanel>
-
-							<ContentPresenter Grid.Row="0" DockPanel.Dock="Top" Content="{Binding MatchBuilder}" ContentTemplate="{StaticResource conditionBuilder}"/>
-
-							<ContentPresenter Grid.Row="2" Grid.Column="2" Content="{Binding ActionBuilder}" ContentTemplate="{StaticResource actionBuilder}"/>
-						</DockPanel>
-					</ScrollViewer>
-				</DockPanel>
-				
-			</DataTemplate>
-			
-			<DataTemplate x:Key="runSearchTemplate" DataType="{x:Type appmodels:CustomSearchVM}">
-
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto"/>
-						<RowDefinition Height="95*"/>
-					</Grid.RowDefinitions>
-
-
-					<StackPanel Name="btnPanel" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-						<Button Name="btnEdit" Style="{StaticResource textButton}" Content="EDIT SEARCH" FontSize="14" Command="{Binding CmdEditSearch}">
-
-						</Button>
-						<Button Name="btnRunSearch" Style="{StaticResource textButton}" MaxHeight="32" FontSize="14" Command="{Binding RunSearchVM.CmdRunSearch}">
-							RUN SEARCH
-						</Button>
-						<Button Name="btnRunActions" Style="{StaticResource textButton}" MaxHeight="32" FontSize="14"
-									Command="{Binding CmdRunActions}" Visibility="{Binding Path=ResultsList, Converter={StaticResource NonNullToVisible}}">
-							APPLY ACTIONS
-						</Button>
-						
-					</StackPanel>
-					
-					<DockPanel Grid.Row="1" Name="runSearchPanel"
-							   DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.RunSearchVM}">
-
-						<StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
-
-							<StackPanel Name="pickFolderPanel" Orientation="Horizontal" DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext}">
-							<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickDirectory}">
-								<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
-							</Button>
-							<TextBox Style="{StaticResource TextInputTemplate}" Name="fldDirectory"
-									 Text="{Binding SearchDirectory, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" />
-							</StackPanel>
-							
-
-						</StackPanel>
-
-						<controls:ProgressControl Margin="4,0,4,0" DockPanel.Dock="Top"
-                                  DataContext="{Binding CurrentProgress}"
-                                  Visibility="{Binding Path=IsRunning, Converter={StaticResource BoolVisibility}}" />
-
-						<ContentPresenter DockPanel.Dock="Bottom" Content="{Binding ResultsList}">
-							<ContentPresenter.ContentTemplate>
-								<DataTemplate>
-
-									<controls:FileList Visibility="{Binding Converter={StaticResource NonNullToVisible}}">
-										<controls:FileList.Buttons>
-
-											<Button Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Open in Explorer" Command="{Binding CmdOpenChecked}" Visibility="{Binding ShowOpenCmd, Converter={StaticResource BoolVisibility}}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-													<Image Source="/TorboFile;component/assets/images/document-preview.png" MaxHeight="28" MaxWidth="28" />
-												</Button>
-												<Button Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Show in Explorer" Command="{Binding CmdShowLocation}" Visibility="{Binding ShowOpenLocationCmd, Converter={StaticResource BoolVisibility}}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-													<Image Source="/TorboFile;component/assets/images/large/folder.png" MaxHeight="28" MaxWidth="28"  />
-												</Button>
-											
-												<Button Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Delete Selected" Command="{Binding CmdDelete}" Visibility="{Binding ShowDeleteCmd, Converter={StaticResource BoolVisibility}}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-													<Image Source="/TorboFile;component/assets/images/dialog-close.png" MaxHeight="28" MaxWidth="28" />
-												</Button>
-
-											<Button Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Run Actions" Command="{Binding ElementName=runSearchPanel, Path=DataContext.CmdRunActions}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-												<Image Source="/TorboFile;component/assets/images/image_start.png" MaxHeight="28" MaxWidth="28" />
-											</Button>
-											
-										</controls:FileList.Buttons>
-									</controls:FileList>
-
-								</DataTemplate>
-							</ContentPresenter.ContentTemplate>
-						</ContentPresenter>
-					</DockPanel>
-
-				</Grid>
-
-			</DataTemplate>
-			
-		</ResourceDictionary>
-
-	</UserControl.Resources>
-
-		<ContentPresenter Content="{Binding}">
-		<ContentPresenter.Style>
-			
-			<Style TargetType="ContentPresenter">
-				<Style.Triggers>
-					<DataTrigger Binding="{Binding EditMode}" Value="true">
-						<Setter Property="ContentTemplate" Value="{StaticResource buildSearchTemplate}" />
-					</DataTrigger>
-					<DataTrigger Binding="{Binding EditMode}" Value="False">
-						<Setter Property="ContentTemplate" Value="{StaticResource runSearchTemplate}" />
-					</DataTrigger>
-
-				</Style.Triggers>
-			</Style>
-		</ContentPresenter.Style>
-	</ContentPresenter>
+	<controls:BuildSearch/>
+	<UserControl.Style>
+		<Style TargetType="UserControl">
+			<Style.Triggers>
+				<DataTrigger Binding="{Binding EditMode}" Value="false">
+					<Setter Property="Template">
+						<Setter.Value>
+							<ControlTemplate>
+							<controls:RunSearch />
+							</ControlTemplate>
+						</Setter.Value>
+					</Setter>
+				</DataTrigger>
+			</Style.Triggers>
+		</Style>
+	</UserControl.Style>
 
 </UserControl>
