--- a/TorboFile/View/Controls/CategoryManagerView.xaml
+++ b/TorboFile/View/Controls/CategoryManagerView.xaml
@@ -39,7 +39,7 @@
         </Grid.ColumnDefinitions>
 
         <DockPanel Grid.Row="0" Grid.Column="0" Background="{StaticResource BackDarkBrush}">
-            <TextBlock DockPanel.Dock="Top" MaxHeight="24" Margin="0,2,0,2" Text="Sets:" FontSize="10" Foreground="{StaticResource BackLightBrush}" />
+            <TextBlock DockPanel.Dock="Top" MaxHeight="24" Margin="0,2,0,2" Text="{x:Static r:MainStrings.CATEGORY_SETS_HEADER}" FontSize="10" Foreground="{StaticResource BackLightBrush}" />
 
             <ListView x:Name="SetListBox" SelectionMode="Single"
                          SelectedItem="{Binding FocusedSet, Mode=TwoWay}"
@@ -72,28 +72,21 @@
             </ListView>
         </DockPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="center">
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
 
-            <Button x:Name="BtnEditSet" Style="{StaticResource StdButton}" Margin="2,0" ToolTip="Edit Category"
-                Command="{Binding CmdEditSet}">
-                <Image Source="/TorboFile;component/assets/images/edit-6.png"/>
+			<Button x:Name="BtnEditSet" Style="{StaticResource BtnEditItem}" ToolTip="Edit Category"
+                Command="{Binding CmdEditSet}" Padding="2"/>
 
-            </Button>
+			<Button x:Name="BtnRemoveSet" Style="{StaticResource BtnRemoveItem}" Margin="2,0" ToolTip="Remove Category Set"
+                    Command="{Binding CmdRemoveSet}" Padding="2" />
+			<Button x:Name="BtnNewSet" Style="{StaticResource BtnAddItem}" Margin="2,0" ToolTip="Add Category Set"
+                    Command="{Binding CmdNewSet}" Padding="2"/>
 
-            <Button x:Name="BtnRemoveSet" Margin="2,0" ToolTip="Remove Category Set"
-                    Command="{Binding CmdRemoveSet}" Style="{StaticResource StdButton}">
-                <Image Source="/TorboFile;component/assets/images/list-remove-4.png"/>
-            </Button>
-            <Button x:Name="BtnNewSet" Style="{StaticResource StdButton}" Margin="2,0" ToolTip="Add Category Set"
-                    Command="{Binding CmdNewSet}">
-                <Image Source="/TorboFile;component/assets/images/list-add-4.png"/>
-            </Button>
-
-        </StackPanel>
+		</StackPanel>
 
         <DockPanel Grid.Row="0" Grid.Column="1" Background="{StaticResource BackDarkBrush}">
             <TextBlock DockPanel.Dock="Top" MaxHeight="24" Margin="0,2,0,2" Foreground="{StaticResource BackLightBrush}" 
-                       VerticalAlignment="Top" Text="Categories:" FontSize="10"/>
+                       VerticalAlignment="Top" Text="{x:Static r:MainStrings.CATEGORIES_HEADER}" FontSize="10"/>
 
             <ListView x:Name="CategoryListBox" HorizontalContentAlignment="Stretch"
                          ItemsSource="{Binding CategoryManager.Current}"
@@ -116,29 +109,14 @@
         </DockPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" FlowDirection="LeftToRight">
-            <Button x:Name="BtnEdit" Style="{StaticResource StdButton}" Margin="2,0" Padding="2" ToolTip="Edit Category"
-                Command="{Binding CmdEditCategory}">
-                <Image Source="/TorboFile;component/assets/images/edit-6.png"/>
-                <!--<Button.Background>
-                    <ImageBrush Stretch="Uniform" ImageSource="/TorboFile;component/assets/images/edit-6.png"/>
-                </Button.Background>-->
-            </Button>
-            <Button x:Name="BtnDelete" Padding="2"  Margin="2,0" ToolTip="Remove Category"
-                Command="{Binding CmdDeleteCategory}" Style="{StaticResource StdButton}">
-                <Image Source="/TorboFile;component/assets/images/list-remove-4.png"/>
-                <!--<Button.Background>
-                    <ImageBrush Stretch="Uniform" ImageSource="/TorboFile;component/assets/images/list-remove-4.png"/>
-                </Button.Background>-->
-            </Button>
-            <Button x:Name="BtnNew" Style="{StaticResource StdButton}" Margin="2,0" Padding="2" ToolTip="Add Category"
-                    Command="{Binding CmdNewCategory}">
-                <Image Source="/TorboFile;component/assets/images/list-add-4.png"/>
-                <!--<Button.Background>
-                    <ImageBrush ImageSource="/TorboFile;component/assets/images/list-add-4.png" Stretch="Uniform"/>
-                </Button.Background>-->
-            </Button>
+			<Button x:Name="BtnEdit" Style="{StaticResource BtnEditItem}" ToolTip="Edit Category" Padding="2"
+                Command="{Binding CmdEditCategory}"/>
+			<Button x:Name="BtnDelete" Style="{StaticResource BtnRemoveItem}" ToolTip="Remove Category" Padding="2"
+                Command="{Binding CmdDeleteCategory}"/>
+			<Button x:Name="BtnNew" Style="{StaticResource BtnAddItem}" ToolTip="Add Category" Padding="2"
+                    Command="{Binding CmdNewCategory}"/>
 
-        </StackPanel>
+		</StackPanel>
     </Grid>
 
 </UserControl>
