--- a/TorboFile/View/Controls/FileSelectionView.xaml
+++ b/TorboFile/View/Controls/FileSelectionView.xaml
@@ -21,25 +21,20 @@
     <DockPanel>
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
 
-            <Button DockPanel.Dock="Bottom" x:Name="BtnOpen" Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Open in Explorer" Command="{Binding CmdOpenChecked}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <Image Source="/TorboFile;component/assets/images/document-preview.png" MaxHeight="28" MaxWidth="28" />
-            </Button>
-            <Button DockPanel.Dock="Bottom" x:Name="BtnShow" Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Show in Explorer" Command="{Binding CmdShowLocation}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <Image Source="/TorboFile;component/assets/images/large/folder.png" MaxHeight="28" MaxWidth="28"  />
-            </Button>
-            <Button DockPanel.Dock="Bottom" x:Name="BtnDelete" Style="{StaticResource StdButton}"
-                MinHeight="32" MinWidth="32" Margin="2,0,2,2"
-                ToolTip="Delete Selected" Command="{Binding CmdDelete}"
-                VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                <Image Source="/TorboFile;component/assets/images/dialog-close.png" MaxHeight="28" MaxWidth="28" />
-            </Button>
-        </StackPanel>
+			<Button DockPanel.Dock="Bottom" x:Name="BtnOpen" Style="{StaticResource BtnOpenExternal}"
+                MaxHeight="32" MaxWidth="32" Margin="2,0,2,2"
+               Command="{Binding CmdOpenChecked}" />
+
+			<Button DockPanel.Dock="Bottom" x:Name="BtnShow" Style="{StaticResource BtnShowExternal}"
+                MaxWidth="32" MaxHeight="32" Margin="2,0,2,2" Command="{Binding CmdShowLocation}" />
+
+			<Button DockPanel.Dock="Bottom" x:Name="BtnDelete" Style="{StaticResource BtnDelete}"
+					
+                MaxWidth="32" MaxHeight="32" Margin="2,0,2,2"
+					Command="{Binding CmdDelete}"
+                VerticalAlignment="Bottom"/>
+			
+		</StackPanel>
 
         <ListView DockPanel.Dock="Top" x:Name="ListResults" ItemsSource="{Binding Items}"
  GridViewColumnHeader.Click="ListResults_Click"
